Content: populate precautions page checkbox items

--- a/precautions.html
+++ b/precautions.html
@@ -24,28 +24,75 @@
           <div class="section">
             <form id="general-form">
               <strong>General</strong><br>
-              <!-- checkboxes will be added here -->
+
+<input class="instruction" type="checkbox" name="instruction" value="worsening or severe pain">worsening or severe pain<br>
+
+
+<input class="instruction" type="checkbox" name="instruction" value="sudden worsening of your symptoms or feeling much sicker than before">sudden worsening <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="fatigue/weakness">fatigue/weakness <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="new or severe pain that does not improve with the pain medications we recommended">pain that does not improve w/ meds <br>
+
+
+<input class="instruction" type="checkbox" name="instruction" value="any new symptom that is severe, persistent, or concerning to you">anything new or concerning <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="new or worsening trouble breathing, chest pain, or fainting">chest pain, dyspnea, syncope <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="unintentional weight-loss">unintentional weight-loss <br> 
+
+<input class="instruction" type="checkbox" name="instruction" value="Excessive thirst and urination with weight loss or fatigue (concerning for diabetes)">polyuria/ polydypsia/ fatigue <br> 
+
             </form>
           </div>
 
           <div class="section">
             <form id="infectious-form">
               <strong>Infectious / Immune</strong><br>
-              <!-- checkboxes will be added here -->
+
+<input class="instruction" type="checkbox" name="instruction" value="fever ≥100.4ºF or chills">Fever ≥100.4ºF or chills<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="drainage of pus from a wound">drainage of pus from a wound <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="facial swelling or swelling of lips/tongue associated with rash (possible allergic reaction)">angioedema <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="new wheezing or feeling like your airway is closing">wheezing/stridor <br>
+
             </form>
           </div>
 
           <div class="section">
             <form id="cardiac-form">
               <strong>Cardiac</strong><br>
-              <!-- checkboxes will be added here -->
+
+<input class="instruction" type="checkbox" name="instruction" value="chest pain">chest pain<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="chest pain especially with activities/ exertion or pain that radiates">chest pain with activities <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="passing out or syncope">syncope <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="palpitations with dizziness or fainting">palpitations <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="new or worsening leg swelling, especially if one-sided or with shortness of breath">new or worsening leg swelling <br>
+
             </form>
           </div>
 
           <div class="section">
             <form id="pulmonary-form">
               <strong>Pulmonary</strong><br>
-              <!-- checkboxes will be added here -->
+
+<input class="instruction" type="checkbox" name="instruction" value="shortness of breath">shortness of breath<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="pulse oxygen &lt;92%">low pulse Ox<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="pain with breathing">pain with breathing <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="wheezing not relieved by your inhaler">wheezing <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="coughing up blood">coughing up blood <br>
+
+
             </form>
           </div>
         </div>
@@ -54,28 +101,74 @@
           <div class="section">
             <form id="neuro-form">
               <strong>Neuro</strong><br>
-              <!-- checkboxes will be added here -->
+
+<input class="instruction" type="checkbox" name="instruction" value="new/ worsening weakness">new weakness<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="new numbness or tingling in face/arms/legs">new numbness or tingling<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="new blurry or double vision">new blurry or double vision <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="new speech changes/slurred speech">new speech changes <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="changes in coordination or trouble walking">coordination/gait changes <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="confusion or trouble speaking/understanding">confusion <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="sudden severe headache ('worst headache of my life')">severe headache <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="new seizures or seizures different from baseline">new seizures <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="neck stiffness especially with fever">neck stiffness <br>
+
             </form>
           </div>
 
           <div class="section">
             <form id="gi-form">
               <strong>GI</strong><br>
-              <!-- checkboxes will be added here -->
+
+<input class="instruction" type="checkbox" name="instruction" value="vomiting">vomiting<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="unable to keep food down due to vomiting even after taking nausea medicine">vomiting after nausea meds<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="vomiting blood or dark brown (coffee ground appearing) vomit">vomiting blood/dark brown vomit <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="bloody or black stools">bloody or black stools <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="jaundice or new yellowing of skin/eyes">jaundice <br>
+
             </form>
           </div>
 
           <div class="section">
             <form id="gu-renal-form">
               <strong>GU / Renal</strong><br>
-              <!-- checkboxes will be added here -->
+
+<input class="instruction" type="checkbox" name="instruction" value="pain or burning with peeing">pain or burning with peeing<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="blood in the urine">blood in the urine<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="back/flank pain">back/flank pain<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="inability to urinate or very low urine output
+">enuresis<br>
+
             </form>
           </div>
 
           <div class="section">
             <form id="skin-form">
               <strong>Skin</strong><br>
-              <!-- checkboxes will be added here -->
+
+<input class="instruction" type="checkbox" name="instruction" value="rapidly spreading redness, swelling, or pain around a wound or rash">worsening rash<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="new redness or swelling of a wound">new redness / swelling of wound<br>
+
+
+<input class="instruction" type="checkbox" name="instruction" value="widespread rash with fever, blistering, or peeling skin">rash w/ fever, blisters, peeling<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="severe itching or hives not improving with antihistamines and associated with breathing or swallowing issues">worsening urticaria<br>
+
             </form>
           </div>
         </div>
@@ -84,28 +177,66 @@
           <div class="section">
             <form id="male-gu-form">
               <strong>Male GU</strong><br>
-              <!-- checkboxes will be added here -->
+
+<input class="instruction" type="checkbox" name="instruction" value="drainage or discharge from the penis">discharge from penis<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="new lesions/sores on the penis">new lesions/sores on the penis<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="scrotal pain or swelling or severe testicle pain">scrotal pain or swelling<br>
+
             </form>
           </div>
 
           <div class="section">
             <form id="female-gu-form">
               <strong>Female GU</strong><br>
-              <!-- checkboxes will be added here -->
+
+<input class="instruction" type="checkbox" name="instruction" value="vaginal bleeding or more than 2 pads per hour">vaginal bleeding &gt;2 pads per hour<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="drainage of smelly or discolored fluid from the vagina">drainage from the vagina<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="worsening or severe pelvic pain">worsening or severe pelvic pain<br>
+
             </form>
           </div>
 
           <div class="section">
             <form id="msk-form">
               <strong>MSK</strong><br>
-              <!-- checkboxes will be added here -->
+
+<input class="instruction" type="checkbox" name="instruction" value="worsening joint pain">worsening joint pain<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="joint swelling or redness">joint swelling or redness <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="an open wound or uncontrolled bleeding">open wound or bleeding <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="new trouble feeling or moving your fingers or hands, or cold/pale fingers">ischemic UE <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="new trouble feeling or moving your toes/feet, or cold/pale toes">ischemic LE<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="pain so bad you cannot bear weight or walk">pain w/ ambulation <br>
+
             </form>
           </div>
 
           <div class="section">
             <form id="ent-form">
               <strong>ENT</strong><br>
-              <!-- checkboxes will be added here -->
+
+<input class="instruction" type="checkbox" name="instruction" value="difficulty breathing or high-pitched-noisy breathing (stridor)">stridor<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="inability to swallow saliva or severe throat pain with drooling">odynophagia <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="changes in how your voice sounds or muffling of your voice">changes in phonation <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="sudden hearing loss">hearing loss <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="ear pain with fever">ear pain w/ fever <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="drainage of pus/ fluid/ or blood from the ears">ear drainage <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="severe nosebleeds that don't stop with pressure">severe epistaxis <br>
+
             </form>
           </div>
         </div>
@@ -114,21 +245,55 @@
           <div class="section">
             <form id="ophtho-form">
               <strong>Ophtho</strong><br>
-              <!-- checkboxes will be added here -->
+
+<input class="instruction" type="checkbox" name="instruction" value="sudden vision loss or new blurry vision">vision changes<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="new or worsening eye pain that does not resolve with the medications we prescribed">eye pain <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="new flashes of light, floaters, or a curtain/shadow over your vision">visual curtain <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="drainage of pus from or around the eye">purulent drainage <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="painful eye movements">pain with EOMs <br>
+
             </form>
           </div>
 
           <div class="section">
             <form id="psych-form">
               <strong>Psych</strong><br>
-              <!-- checkboxes will be added here -->
+
+<input class="instruction" type="checkbox" name="instruction" value="suicidal thoughts or plans">SI<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="homicidal thoughts or intent to harm others">HI <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="new or worsening hallucinations or psychosis">psychosis <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="inability to care for self (not eating/drinking, wandering)">trouble w/ ADLs <br>
+
             </form>
           </div>
 
           <div class="section">
             <form id="peds-form">
               <strong>Peds</strong><br>
-              <!-- checkboxes will be added here -->
+
+<input class="instruction" type="checkbox" name="instruction" value="acting much more sleepy or lethargic than normal">lethargy<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="difficulty breathing: rapid breathing, retractions (sucking in between ribs), nasal flaring, or grunting">respiratory distress <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="acting much more fussy than normal or inconsolable">fussy/inconsolable <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="eating/pooping/ or peeing less than normal (&lt;4 wet diapers in 24 hours)">diet or BM changes <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="refusing to feed or drink, or signs of dehydration (very few wet diapers, no tears when crying, dry mouth)">dehydration <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="persistent vomiting or diarrhea with inability to keep fluids down">vomiting/diarrhea <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="high fever: Any fever ≥100.4°F (38°C) in infants &lt;2 months">high fever <br>
+
+<input class="instruction" type="checkbox" name="instruction" value="new or worsening rash, especially purple spots/bruising (petechiae) not explained by injury">rash/petechiae <br>
+
             </form>
           </div>
         </div>
