Layout: four-column precautions page no-wrap and tightened heading spacing

--- a/precautions.html
+++ b/precautions.html
@@ -18,7 +18,7 @@
       </div>
     </header>
 
-    <main class="page">
+  <main class="page precautions">
       <div class="columns">
         <div class="column">
           <div class="section">
