UX: tighten vertical spacing on Precautions (remove extra <br>, reduce heading gap)

--- a/precautions.html
+++ b/precautions.html
@@ -23,10 +23,10 @@
         <div class="column">
           <div class="section">
             <form id="general-form">
-              <strong>General</strong><br>
+
+              <strong>General</strong>
 
 <input class="instruction" type="checkbox" name="instruction" value="worsening or severe pain">worsening or severe pain<br>
-
 
 <input class="instruction" type="checkbox" name="instruction" value="sudden worsening of your symptoms or feeling much sicker than before">sudden worsening <br>
 
@@ -48,7 +48,8 @@
 
           <div class="section">
             <form id="infectious-form">
-              <strong>Infectious / Immune</strong><br>
+
+              <strong>Infectious / Immune</strong>
 
 <input class="instruction" type="checkbox" name="instruction" value="fever ≥100.4ºF or chills">Fever ≥100.4ºF or chills<br>
 
@@ -63,7 +64,7 @@
 
           <div class="section">
             <form id="cardiac-form">
-              <strong>Cardiac</strong><br>
+              <strong>Cardiac</strong>
 
 <input class="instruction" type="checkbox" name="instruction" value="chest pain">chest pain<br>
 
@@ -80,7 +81,7 @@
 
           <div class="section">
             <form id="pulmonary-form">
-              <strong>Pulmonary</strong><br>
+              <strong>Pulmonary</strong>
 
 <input class="instruction" type="checkbox" name="instruction" value="shortness of breath">shortness of breath<br>
 
@@ -100,7 +101,7 @@
         <div class="column">
           <div class="section">
             <form id="neuro-form">
-              <strong>Neuro</strong><br>
+              <strong>Neuro</strong>
 
 <input class="instruction" type="checkbox" name="instruction" value="new/ worsening weakness">new weakness<br>
 
@@ -125,7 +126,7 @@
 
           <div class="section">
             <form id="gi-form">
-              <strong>GI</strong><br>
+              <strong>GI</strong>
 
 <input class="instruction" type="checkbox" name="instruction" value="vomiting">vomiting<br>
 
@@ -142,7 +143,7 @@
 
           <div class="section">
             <form id="gu-renal-form">
-              <strong>GU / Renal</strong><br>
+              <strong>GU / Renal</strong>
 
 <input class="instruction" type="checkbox" name="instruction" value="pain or burning with peeing">pain or burning with peeing<br>
 
@@ -158,7 +159,7 @@
 
           <div class="section">
             <form id="skin-form">
-              <strong>Skin</strong><br>
+              <strong>Skin</strong>
 
 <input class="instruction" type="checkbox" name="instruction" value="rapidly spreading redness, swelling, or pain around a wound or rash">worsening rash<br>
 
@@ -176,7 +177,7 @@
         <div class="column">
           <div class="section">
             <form id="male-gu-form">
-              <strong>Male GU</strong><br>
+              <strong>Male GU</strong>
 
 <input class="instruction" type="checkbox" name="instruction" value="drainage or discharge from the penis">discharge from penis<br>
 
@@ -189,7 +190,7 @@
 
           <div class="section">
             <form id="female-gu-form">
-              <strong>Female GU</strong><br>
+              <strong>Female GU</strong>
 
 <input class="instruction" type="checkbox" name="instruction" value="vaginal bleeding or more than 2 pads per hour">vaginal bleeding &gt;2 pads per hour<br>
 
@@ -202,7 +203,7 @@
 
           <div class="section">
             <form id="msk-form">
-              <strong>MSK</strong><br>
+              <strong>MSK</strong>
 
 <input class="instruction" type="checkbox" name="instruction" value="worsening joint pain">worsening joint pain<br>
 
@@ -221,7 +222,7 @@
 
           <div class="section">
             <form id="ent-form">
-              <strong>ENT</strong><br>
+              <strong>ENT</strong>
 
 <input class="instruction" type="checkbox" name="instruction" value="difficulty breathing or high-pitched-noisy breathing (stridor)">stridor<br>
 
@@ -244,7 +245,7 @@
         <div class="column">
           <div class="section">
             <form id="ophtho-form">
-              <strong>Ophtho</strong><br>
+              <strong>Ophtho</strong>
 
 <input class="instruction" type="checkbox" name="instruction" value="sudden vision loss or new blurry vision">vision changes<br>
 
