--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           <a href="index.html">Home</a>
           <a href="instructions.html">Instructions</a>
           <a href="precautions.html">Precautions</a>
+          <a href="tools.html">Tools</a>
         </nav>
       </div>
     </header>
@@ -24,6 +25,7 @@
         <div style="margin-top:18px; display:flex; gap:12px; justify-content:center;">
           <a class="launch-btn" href="instructions.html">Instructions</a>
           <a class="launch-btn" href="precautions.html">Precautions</a>
+          <a class="launch-btn" href="tools.html">Tools</a>
         </div>
       </div>
     </main>
