--- a/instructions.html
+++ b/instructions.html
@@ -14,6 +14,7 @@
           <a href="index.html">Home</a>
           <a href="instructions.html">Instructions</a>
           <a href="precautions.html">Precautions</a>
+          <a href="tools.html">Tools</a>
         </nav>
       </div>
     </header>
