Precautions: remove stray <br> after Psych and Peds headings to tighten spacing

--- a/precautions.html
+++ b/precautions.html
@@ -263,8 +263,7 @@
 
           <div class="section">
             <form id="psych-form">
-              <strong>Psych</strong><br>
-
+              <strong>Psych</strong>
 <input class="instruction" type="checkbox" name="instruction" value="suicidal thoughts or plans">SI<br>
 
 <input class="instruction" type="checkbox" name="instruction" value="homicidal thoughts or intent to harm others">HI <br>
@@ -278,8 +277,7 @@
 
           <div class="section">
             <form id="peds-form">
-              <strong>Peds</strong><br>
-
+              <strong>Peds</strong>
 <input class="instruction" type="checkbox" name="instruction" value="acting much more sleepy or lethargic than normal">lethargy<br>
 
 <input class="instruction" type="checkbox" name="instruction" value="difficulty breathing: rapid breathing, retractions (sucking in between ribs), nasal flaring, or grunting">respiratory distress <br>
